# guestandgray

./: .gitignore  README.md  db.sqlite3  fabfile.py  fabfileOLD.py  path  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.old  requirements.txt  sass_command  setup.py  target
database_backup/: gray.dump
deployment/: database_helper.py  first_setup.sh  gunicorn.conf  gunicorn_start  nginx_site
docs/: gray.deployment.rst  gray.mysite.rst  gray.mysite.settings.rst  gray.rst  gray.shop.migrations.rst  gray.shop.rst  gray.shop.tests.rst  gray.shop.views.rst  gray.table_manager.migrations.rst  gray.table_manager.rst  gray.website.migrations.rst  gray.website.rst  modules.rst
docs/source/: conf.py  index.rst  item.rst
fab/: database.py  deployment.py  provision.py  settings.py
mysite/: urls.py
mysite/settings/: base.py  dev.py  live.py  prod.py
notes/: forms.py  models.py  tables.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_auto_20211227_1914.py  0003_auto_20220116_0849.py
shop/: admin.py  cat_tree.py  filters.py  forms.py  import_data.py  import_helper.py  models.py  session.py  sitemap.py  tables.py  truncater.py  urls.py  views.py  wagtail_hooks.py
shop/management/: utils.py
shop/migrations/: 0001_initial.py  0009_book.py  (+65 more)
table_manager/: apps.py  buttons.py  filters.py  mixins.py  new_views.py  session.py  tables.py  tests.py  views.py
tables_plus/: apps.py  buttons.py  tables.py  tests.py  utils.py  views.py
templates/: generic_table.html  lines_per_page.html  table_data.html
website/: image_formats.py  models.py
(+272 files in other folders)
